Добавил контекст пользователя, реализовал удаление своих карточек и обработку лайка. Добавил обновление данных пользователя из соответствующей формы

--- a/src/blocks/popup/__window/_type/popup__window_type_fullscreen-img.css
+++ b/src/blocks/popup/__window/_type/popup__window_type_fullscreen-img.css
@@ -1,5 +1,5 @@
 .popup__window_type_fullscreen-img {
-    max-width: 90vw;
+    max-width: 100%;
     max-height: 75vh;
     padding: 0;
     top: 90px;
