Добавил спиннер при загрузке данных на сервер, реализовал анимацию при помощи нпм пакета react-transition-group, добавил еще один контекст

--- a/src/index.css
+++ b/src/index.css
@@ -55,4 +55,4 @@
 
 @import url('./blocks/footer/footer.css');
 @import url('./blocks/footer/__copyright/footer__copyright.css');
-
+@import url('./blocks/spinner/spinner.css');
